@@ -3,6 +3,7 @@
 
 - mosquitto_sub can now subscribe to multiple topics (limited to a global QoS).
 - mosquitto_pub can now send a file as a message.
+- mosquitto_pub can now read all of stdin and send it as a message.
 
 0.5.4 - 20100311
 ================
